# ChangeLog for games-emulation/sdlmame
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-emulation/sdlmame/ChangeLog,v 1.23 2009/09/26 22:45:01 mr_bones_ Exp $

*sdlmame-0.134_p1 (26 Sep 2009)

  26 Sep 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +sdlmame-0.134_p1.ebuild:
  version bump

*sdlmame-0.133_p2 (13 Aug 2009)

  13 Aug 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +sdlmame-0.133_p2.ebuild:
  patch version update

*sdlmame-0.133 (21 Jul 2009)

  21 Jul 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +sdlmame-0.133.ebuild:
  version bump

*sdlmame-0.132 (10 Jun 2009)

  10 Jun 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +sdlmame-0.132.ebuild:
  version bump

*sdlmame-0.131_p4 (06 Jun 2009)

  06 Jun 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +sdlmame-0.131_p4.ebuild:
  version bump

*sdlmame-0.131_p3 (30 May 2009)

  30 May 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +sdlmame-0.131_p3.ebuild:
  version bump

*sdlmame-0.131_p2 (18 May 2009)

  18 May 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +sdlmame-0.131_p2.ebuild:
  version bump

*sdlmame-0.131_p1 (08 May 2009)

  08 May 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +sdlmame-0.131_p1.ebuild:
  version bump

*sdlmame-0.131 (27 Apr 2009)

  27 Apr 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +sdlmame-0.131.ebuild:
  version bump

*sdlmame-0.130_p4 (19 Apr 2009)

  19 Apr 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +sdlmame-0.130_p4.ebuild:
  version bump

*sdlmame-0.130_p3 (11 Apr 2009)

  11 Apr 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +sdlmame-0.130_p3.ebuild:
  version bump

*sdlmame-0.130_p2 (09 Apr 2009)

  09 Apr 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +sdlmame-0.130_p2.ebuild:
  version bump

  18 Mar 2009; Brent Baude <ranger@gentoo.org> sdlmame-0.129.ebuild:
  stable ppc, bug 259567

  08 Mar 2009; Markus Meier <maekke@gentoo.org> sdlmame-0.129.ebuild:
  amd64/x86 stable, bug #259567
