@@ -4,7 +4,9 @@ AUX vector.ini 116 RMD160 e63ed40b21a2426b28571d514933efab6ccce7e8 SHA1 c6615ce4
 DIST sdlmame-manpages.tar.gz 14400 RMD160 14660470488458a8897a8a924c12f7ab961d6729 SHA1 279fbf37668282c0e4e86d62a29f5ec53fa0ab1a SHA256 507240258dfb816fbfddc674c5995a126c7a975158c2aad1ada8cb064c5e3d08
 DIST sdlmame0129.zip 17329162 RMD160 23a13fb73b90b0c3c173a9ac2808f568a0a09c9e SHA1 bf65a6f428a6824872bfa557ca5ad2b2800a433c SHA256 f38ca5903cb9a7a5c4d24b5d1eb435ff282c560a42c1a749ca1dc3b347a9bf2e
 DIST sdlmame0134u1.zip 18307253 RMD160 22df640fa068f5a95aef20a99a32a3acd836afcb SHA1 264288ce55f0fac2f086bb06625f9e12031595f6 SHA256 0a51cfb7c7be30ce6155e546e7196a5011c899d60cd682b3003d9e3df41c8a1d
+DIST sdlmame0134u4.zip 18451392 RMD160 c8547422eb17ad049703bb7af31d221af3cc7af5 SHA1 c6c2d082859e18296a8697ee6d03b3436de067bf SHA256 8a66f1573b9ec23211bb8039301b39404f6fb1fe7388d68478f57532c60d5102
 EBUILD sdlmame-0.129.ebuild 3266 RMD160 bcd6615a4e52cd0fdeac6f58f91582b7891e31f4 SHA1 f7764fafb3cdcc40d43dd41cd36477d3afe805a9 SHA256 02c962612a740518b78458c5798294a9240cf86d136deb9315af1754ec67fd19
 EBUILD sdlmame-0.134_p1.ebuild 3251 RMD160 af6652cb46f6454651b8e996e24ed6ded4092daf SHA1 5d22773aedf0e0054b459b0344bf4735a88daece SHA256 c8dda2a6b8ff2ec6cb9c0c87563fbdc6ccdb1dd3fe347bcbf3bbf0afb4ea7f3d
-MISC ChangeLog 3062 RMD160 a0fa7e98650a9f7ab99b3ff3e8c9f5284ca9a308 SHA1 002288358774d82ddaa91513743b33aca3391be5 SHA256 f848d8adcd44f3c6d1a4b8e5fc2ed600fca4c861606a42eaa7ebcea3a34db467
+EBUILD sdlmame-0.134_p4.ebuild 3251 RMD160 bd164c66752fcdf781811e43acb997fe00312456 SHA1 a0e70e5dcf162fef3baf71aba6f1216769b30c4f SHA256 69a99096b7150cdef7178e785cb20efaab3863e27782b289c28b7071aadc318b
+MISC ChangeLog 3194 RMD160 8436340c5b6150e3ae57ad181538c5d026c3a4f8 SHA1 238743c914f4f1ce593069b7ee1b204ed4757d0b SHA256 42735489aba64e85b36aafbb032154a9c90072ca705ded10dd04745423d61a29
 MISC metadata.xml 1089 RMD160 9c8a425da7e10ddc2cdf1bfbbf60b23257eca1e7 SHA1 9ba3821b6dc312016d9cecc295555411e8bc044c SHA256 67982ede09eba43a5e84327f2f529031242424222e0d5170f31c8f2e647e937f
