@@ -1,6 +1,12 @@
 # ChangeLog for games-emulation/sdlmame
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-emulation/sdlmame/ChangeLog,v 1.23 2009/09/26 22:45:01 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-emulation/sdlmame/ChangeLog,v 1.24 2009/10/27 06:35:20 mr_bones_ Exp $
+
+*sdlmame-0.134_p4 (27 Oct 2009)
+
+  27 Oct 2009; Michael Sterrett <mr_bones_@gentoo.org>
+  +sdlmame-0.134_p4.ebuild:
+  version bump
 
 *sdlmame-0.134_p1 (26 Sep 2009)
 
